# comfyui-mcp-hub

./: .gitignore  LICENSE  README.md  __init__.py  conftest.py  install.py  pyproject.toml
.github/: CODEOWNERS
mcp_server/: activity.py  archive.py  civitai_client.py  comfyui_client.py  config.py  huggingface_client.py  main.py  workflow_analyzer.py  workflow_repair.py
mcp_server/resources/: status.py
mcp_server/tools/: __init__.py  combo.py  generation.py  instances.py  introspection.py  models.py  packages.py  repair.py  resolver.py  smart_layout.py  ui_bridge.py  version.py  workflow_ops.py  workflows.py
nodes/: join_text_list.py  optional_load_image.py  optional_merge_images.py
server/: activity_log.py  cli_detector.py  instance_registry.py  process_manager.py  routes.py  ui_bridge.py  updater.py
tests/: conftest.py  test_download_integrity.py
web/js/: mcp-hub-bridge.js  mcp-hub-layout.js  mcp-hub-panel.js
