[project]
name = "comfyui-mcp-hub"
version = "0.3.0"
description = "MCP server and control panel for ComfyUI — 74 tools for AI agent integration"
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ArboRithmDev"},
]
keywords = ["comfyui", "mcp", "ai-agents", "stable-diffusion", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/ArboRithmDev/comfyui-mcp-hub"
Repository = "https://github.com/ArboRithmDev/comfyui-mcp-hub"
Issues = "https://github.com/ArboRithmDev/comfyui-mcp-hub/issues"

[tool.comfy]
PublisherId = "arborithmdev"
DisplayName = "MCP Hub"
Description = "Give AI agents full control over ComfyUI — 74 MCP tools for canvas control, CivitAI, workflow management, and more"
Icon = ""
