[project]
name = "comfyui-arbo-mcp-hub"
version = "0.7.0"
description = "MCP server and control panel for ComfyUI — 79 tools for AI agent integration"
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "ArboRithmDev"},
]
keywords = ["comfyui", "mcp", "ai-agents", "stable-diffusion", "workflow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://github.com/ArboRithmDev/comfyui-arbo-mcp-hub"
Repository = "https://github.com/ArboRithmDev/comfyui-arbo-mcp-hub"
Issues = "https://github.com/ArboRithmDev/comfyui-arbo-mcp-hub/issues"

[tool.comfy]
PublisherId = "arborithmdev"
DisplayName = "Arbo MCP Hub"
Description = "Give AI agents full control over ComfyUI — 79 MCP tools for canvas control, CivitAI, workflow management, and more"
Icon = ""

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
